2007-12-06  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/extrentions/: You can now fix an atom, the rest will
	follow soon...

	* avogadro/src/extrentions/: Added atom and bond properties and a
	cartesian coordinate editor.

	* libavogadro/src/tools/: same for AutoOpt

2007-12-05  Marcus D. Hanwell  <marcus@cryos.org>

	* +libavogadro/src/tools/periodictablegv.h,
	libavogadro/src/tools/periodictablegv.cpp,
	libavogadro/src/tools/CMakeLists.txt,
	libavogadro/src/tools/drawtool.h: Added a new periodic table based
	upon the QGraphicsView. Ported the draw tool to use it.

	* -libavogadro/src/tools/periodictabledialog.*: Removed the old
	periodic table dialog.

2007-12-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/*, avogadro/*: Update headers using script based on
	fixkdeincludes. Removes a *huge* pile of un-needed #include
	statments in both *.h and *.cpp files. Should improve compilation
	time.

2007-12-04  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/extrentions/: Added constraints dialog (see mailing
	list).

2007-12-03  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/autoopttool.cpp: Added IsSetupNeeded check to
	increase performance.

2007-12-01  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/engine.h, libavogadro/src/tool.h,
	libavogadro/src/glwidget.h, libavogadro/src/painter.h,
	libavogadro/src/glpainter.h, libavogadro/src/povpainter.h: More
	enhancements for the documentation of these classes.

	* libavogadro/src/povpainter.*: Moved empty implementations to the
	header to show more clearly that they do not do anything.

2007-12-01  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/extentions/forcefieldextension.*: Added a progress bar
	to Systematic Rotor Search. Random and Weighted Rotor Search still
	need to be split in OB.

2007-11-30  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/debugengine.cpp: Small fix to use painter.